# thingie-software

./: .gitignore  CMakeLists.txt  i2s.pio  image.c  sprites.xcf  sprites_small.xcf
fonts/: DejaVuSans12.c  DejaVuSans12bw.c  DejaVuSans12bw_bwfont.c  DejaVuSerif16.c  DejaVuSerif32.c  fixed_10x20.c  fixed_5x8.c  fixed_7x14.c
include/: as5600.h  drawing.h  i2s.h  img.h  keypad.h  minesweeper.h  mp3.h  mp32.h  scroller.h  sgtl5000.h  snake.h  st7789.h  st7789_pio.h  tetris.h  wheel.h
lib/libmad/: bit.c  frame.c  huffman.c  layer3.c  mad.h  stream.c  synth.c
lib/mcufont/: mf_config.h
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SDIO/: rp2040_sdio.c
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/src/: crash.c
lib/st7789/: st7789_pio.c
sim/: create_obj_paths.py  makefile
sim/include/: _time_internal.h  st7789_lcd.pio.h
sim/include/hardware/: clocks.h  dma.h  gpio.h  i2c.h  pio.h  pwm.h
sim/include/pico/: clocks.h  multicore.h  stdlib.h  time.h
sim/src/: clocks.c  gpio.c  i2c.c  main.c  multicore.c  pio.c  pwm.c  st7789_pio.c  time.c
src/: as5600.c  drawing.c  i2s.c  keypad.c  main.c  minesweeper.c  scroller.c  sgtl5000.c  snake.c  st7789.c  st7789_pio.c  tetris.c  wheel.c
